Update 'dotnet-basic-jnaudait' component image to: artifactory-docker-artifactory.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/dotnet-basic-jnaudait:953ea654faf36390cb42d5ed5df24a75f6071cca@sha256:4c312d5036f58891f86b40b1fc4eb608977b7a270a73cb9f345440a3d1d8e224

--- a/components/dotnet-basic-jnaudait/overlays/development/deployment-patch.yaml
+++ b/components/dotnet-basic-jnaudait/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: dotnet-basic-jnaudait
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: artifactory-docker-artifactory.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/dotnet-basic-jnaudait:953ea654faf36390cb42d5ed5df24a75f6071cca@sha256:4c312d5036f58891f86b40b1fc4eb608977b7a270a73cb9f345440a3d1d8e224
+          name: container-image
