--- a/components/dotnet-basic-jnaudait/overlays/prod/deployment-patch.yaml
+++ b/components/dotnet-basic-jnaudait/overlays/prod/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
+      - image: artifactory-docker-artifactory.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/dotnet-basic-jnaudait:96015cd39895a89f676e422885a4e1e55b5e2b37@sha256:dba5d3ece98903c1b9df76ea219e10399417b98ee9d7559f7a07f68da65acd39
         name: container-image  
